fix: auto theme background has the wrong color

--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -1,8 +1,6 @@
 /* Auto (dark) / Dark theme */
 /* Colors from Tailwind CSS v4 (https://tailwindcss.com/docs/colors) */
-:root,
-label[for='auto'],
-label:has(> input#dark) {
+[data-theme='auto'] {
 	--color-base-1: oklch(20.5% 0 0); /* Neutral 900 */
 	--color-base-2: oklch(26.9% 0 0); /* Neutral 800 */
 	--color-text: oklch(98.5% 0 0); /* Neutral 50 */
@@ -13,8 +11,7 @@ label:has(> input#dark) {
 /* Auto (light) theme */
 /* Make the default theme light if the user prefers light mode */
 @media (prefers-color-scheme: light) {
-	:root[data-theme='auto'],
-	label:has(> input#auto) {
+	[data-theme='auto'] {
 		--color-base-1: var(--default-light-color-base-1);
 		--color-base-2: var(--default-light-color-base-2);
 		--color-text: var(--default-light-color-text);
@@ -24,8 +21,7 @@ label:has(> input#dark) {
 }
 
 /* Light theme */
-:root[data-theme='light'],
-label:has(> input#light) {
+[data-theme='light'] {
 	--color-base-1: var(--default-light-color-base-1);
 	--color-base-2: var(--default-light-color-base-2);
 	--color-text: var(--default-light-color-text);
@@ -33,8 +29,7 @@ label:has(> input#light) {
 	--shadow-strength: var(--default-light-shadow-strength);
 }
 
-:root[data-theme='dusk'],
-label:has(> input#dusk) {
+[data-theme='dusk'] {
 	--color-base-1: oklch(15% 0.018 270);
 	--color-base-2: oklch(22% 0.04 330);
 	--color-text: oklch(90% 0.08 340);
@@ -42,8 +37,7 @@ label:has(> input#dusk) {
 	--shadow-strength: 100%;
 }
 
-:root[data-theme='teal'],
-label:has(> input#teal) {
+[data-theme='teal'] {
 	--color-base-1: oklch(52% 0.07 190);
 	--color-base-2: oklch(58% 0.07 185);
 	--color-text: oklch(100% 0 0);
@@ -52,22 +46,20 @@ label:has(> input#teal) {
 }
 
 /* Colors from Tailwind CSS v4 (https://tailwindcss.com/docs/colors) */
-:root[data-theme='amoled'],
-label:has(> input#amoled) {
+[data-theme='amoled'] {
 	--color-base-1: oklch(0 0 0);
 	--color-base-2: oklch(0 0 0);
 	--color-text: oklch(92.2% 0 0); /* Neutral 200 */
 	--color-primary: oklch(92.2% 0 0); /* Neutral 200 */
 	--shadow-strength: 0%;
-}
 
-:root[data-theme='amoled'] textarea {
-	border: 1px solid var(--color-primary);
+	textarea {
+		border: 1px solid var(--color-primary);
+	}
 }
 
 /* Colors from OKSolar (https://meat.io/oksolar) */
-:root[data-theme='solarizedDark'],
-label:has(> input#solarizedDark) {
+[data-theme='solarizedDark'] {
 	--color-base-1: oklch(27.4% 0.05 219.6); /* base03 */
 	--color-base-2: oklch(32.1% 0.053 219.6); /* base02 */
 	--color-text: oklch(71.8% 0.017 198); /* base0 */
@@ -76,8 +68,7 @@ label:has(> input#solarizedDark) {
 }
 
 /* Colors from OKSolar (https://meat.io/oksolar) */
-:root[data-theme='solarizedLight'],
-label:has(> input#solarizedLight) {
+[data-theme='solarizedLight'] {
 	--color-base-1: oklch(93.06% 0.026 92.4); /* base2 */
 	--color-base-2: oklch(97.35% 0.026 90.1); /* base3 */
 	--color-text: oklch(54.4% 0.017 219.6); /* base00 */
@@ -85,8 +76,7 @@ label:has(> input#solarizedLight) {
 	--shadow-strength: var(--default-light-shadow-strength);
 }
 
-:root[data-theme='gruvboxDark'],
-label:has(> input#gruvboxDark) {
+[data-theme='gruvboxDark'] {
 	--color-base-1: oklch(21% 0 0);
 	--color-base-2: oklch(26% 0.01 45);
 	--color-text: oklch(85% 0.08 90);
@@ -94,8 +84,7 @@ label:has(> input#gruvboxDark) {
 	--shadow-strength: 100%;
 }
 
-:root[data-theme='gruvboxLight'],
-label:has(> input#gruvboxLight) {
+[data-theme='gruvboxLight'] {
 	--color-base-1: oklch(85% 0.08 90);
 	--color-base-2: oklch(95% 0.06 90);
 	--color-text: oklch(26% 0.01 45);
@@ -103,8 +92,7 @@ label:has(> input#gruvboxLight) {
 	--shadow-strength: var(--default-light-shadow-strength);
 }
 
-:root[data-theme='catppuccinMocha'],
-label:has(> input#catppuccinMocha) {
+[data-theme='catppuccinMocha'] {
 	--color-base-1: oklch(20% 0.02 270);
 	--color-base-2: oklch(28% 0.03 270);
 	--color-text: oklch(90% 0.06 270);
@@ -112,8 +100,7 @@ label:has(> input#catppuccinMocha) {
 	--shadow-strength: 100%;
 }
 
-:root[data-theme='catppuccinLatte'],
-label:has(> input#catppuccinLatte) {
+[data-theme='catppuccinLatte'] {
 	--color-base-1: oklch(92% 0.01 250);
 	--color-base-2: oklch(96% 0.01 250);
 	--color-text: oklch(30% 0.02 260);
@@ -121,8 +108,7 @@ label:has(> input#catppuccinLatte) {
 	--shadow-strength: var(--default-light-shadow-strength);
 }
 
-:root[data-theme='dracula'],
-label:has(> input#dracula) {
+[data-theme='dracula'] {
 	--color-base-1: oklch(24% 0.03 270);
 	--color-base-2: oklch(36% 0.03 270);
 	--color-text: oklch(98% 0.01 100);
@@ -130,8 +116,7 @@ label:has(> input#dracula) {
 	--shadow-strength: 100%;
 }
 
-:root[data-theme='nord'],
-label:has(> input#nord) {
+[data-theme='nord'] {
 	--color-base-1: oklch(25% 0.03 250);
 	--color-base-2: oklch(30% 0.03 250);
 	--color-text: oklch(88% 0.03 250);
